--- a/src/composer.json
+++ b/src/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "atlas/memcached",
-    "require": {},
+    "require": {
+        "pimple/pimple": "^3.4"
+    },
     "license": "MIT",
     "authors": [
         {
